--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.2
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.15.3
+
+#Fabric api
+fabric_version=0.91.0+1.20.1
 
 # Mod Properties
-mod_version=0.1 - 1.20.4
+mod_version=0.1.1-1.20.1
 maven_group=hernandiito.colormancer
 archives_base_name=colormancer
-
-# Dependencies
-fabric_version=0.91.3+1.20.4
